# Scatterplot

./: CMakeLists.txt  PluginInfo.json  README.md  conanfile.py
.github/workflows/: build.yml  update_plugininfo.yml
scripts/: update_plugininfo.py
src/: BatchScreenshotAction.cpp  BatchScreenshotAction.h  ClusterAction.cpp  ClusterAction.h  ClusteringAction.cpp  ClusteringAction.h  ColorByClustersAction.cpp  ColorByClustersAction.h  ColorByConstantAction.cpp  ColorByConstantAction.h  ColorByDataAction.cpp  ColorByDataAction.h  ColorByDimensionAction.cpp  ColorByDimensionAction.h  ColorByModel.cpp  ColorByModel.h  ColorDataAction.cpp  ColorDataAction.h  ColorDimensionAction.cpp  ColorDimensionAction.h  ColorOptionsModel.cpp  ColorOptionsModel.h  ColorSourceModel.cpp  ColorSourceModel.h  ColoringAction.cpp  ColoringAction.h  ConstantColorAction.cpp  ConstantColorAction.h  DatasetsAction.cpp  DatasetsAction.h  DensityPlotAction.cpp  DensityPlotAction.h  ExportAction.cpp  ExportAction.h  ExportDialog.cpp  ExportImageAction.cpp  ExportImageAction.h  LoadedDatasetsAction.cpp  LoadedDatasetsAction.h  ManualClusteringAction.cpp  (+39 more)
